--- a/webxr/ar-dudu.html
+++ b/webxr/ar-dudu.html
@@ -518,7 +518,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
           labelEl.textContent = "";
         }
 
-        //window.location.href = "/index.html";
+        window.location.href = "/index.html";
       }
 
       // Adds a new object to the scene at the
